--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,12 +14,20 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <build>
+  	<plugins>
+  		<plugin>
+  			<artifactId>maven-surefire-plugin</artifactId>
+  			<version>2.8.1</version>
+  			<configuration></configuration>
+  		</plugin>
+  	</plugins>
+  </build>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.8.2</version>
+  	</dependency>
   </dependencies>
 </project>
