--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,5 +29,10 @@
   		<artifactId>junit</artifactId>
   		<version>4.8.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-all</artifactId>
+  		<version>1.8.5</version>
+  	</dependency>
   </dependencies>
 </project>
