--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,7 +19,10 @@
   		<plugin>
   			<artifactId>maven-surefire-plugin</artifactId>
   			<version>2.8.1</version>
-  			<configuration></configuration>
+  			<configuration>
+  				<parallel>methods</parallel>
+          		<threadCount>10</threadCount>
+  			</configuration>
   		</plugin>
   	</plugins>
   </build>
