--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,6 +10,7 @@
 	<name>core</name>
 	<url>http://maven.apache.org</url>
 
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -37,7 +38,15 @@
 			</plugin>
 		</plugins>
 	</build>
-	<dependencies>
+	<repositories>
+		<repository>
+			<id>maven_add</id>
+			<name>mavenadditional repository</name>
+			<url>https://maven.ch.cam.ac.uk/m2repo/</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
+	<dependencies>		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -47,6 +56,11 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>1.8.5</version>
+		</dependency>
+		<dependency>
+			<groupId>weka</groupId>
+			<artifactId>weka</artifactId>
+			<version>3.5.7</version>
 		</dependency>
 	</dependencies>
 </project>
