--- a/core/pom.xml
+++ b/core/pom.xml
@@ -36,6 +36,12 @@
 					<threadCount>10</threadCount>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+				<version>1.0-alpha-7</version>
+				<configuration></configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<repositories>
@@ -75,6 +81,18 @@
 			<groupId>weka</groupId>
 			<artifactId>weka</artifactId>
 			<version>3.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>jcuda</groupId>
+			<artifactId>jcuda</artifactId>
+			<version>0.3.2a</version>
+		</dependency>				
+		<dependency>
+			<groupId>jcuda</groupId>
+			<artifactId>jcuda-native</artifactId>
+			<version>0.3.2a</version>
+			<type>pom</type>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 </project>
