--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,13 +10,37 @@
 	<name>core</name>
 	<url>http://maven.apache.org</url>
 
-
 	<properties>
+		<lib.directory>${project.build.directory}/lib</lib.directory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<build>
 		<plugins>
+      		<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-dependency-plugin</artifactId>
+        		<executions>
+          			<execution>
+            			<id>unpack</id>
+            			<phase>process-classes</phase>
+            			<goals>
+              				<goal>unpack</goal>
+            			</goals>
+            			<configuration>
+              				<artifactItems>
+                				<artifactItem>
+                  					<groupId>jcuda</groupId>
+                  					<artifactId>jcuda-native</artifactId>
+					                <version>0.3.2a</version>
+                  					<overWrite>true</overWrite>
+                  					<outputDirectory>${lib.directory}</outputDirectory>
+                				</artifactItem>
+              				</artifactItems>
+            			</configuration>
+          			</execution>
+        		</executions>
+      		</plugin>		
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -32,15 +56,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.8.1</version>
 				<configuration>
+					<argline>-Djava.library.path=${lib.directory}</argline>
 					<parallel>methods</parallel>
 					<threadCount>10</threadCount>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>native-maven-plugin</artifactId>
-				<version>1.0-alpha-7</version>
-				<configuration></configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -91,8 +110,6 @@
 			<groupId>jcuda</groupId>
 			<artifactId>jcuda-native</artifactId>
 			<version>0.3.2a</version>
-			<type>pom</type>
-			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 </project>
