--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ core/resources/data/pumsb.dat
 core/resources/data/pumsb_star.dat
 core/resources/data/T10I4D100K.dat
 core/resources/data/T40I10D100K.dat
+presentation/~$GPGPU_in_data_minig.pptx
