--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,20 +17,29 @@
 
 	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptors>
-						<descriptor>src/assemble/exe.xml</descriptor>
+						<descriptor>src/main/assembly/exe.xml</descriptor>
 					</descriptors>
 					<archive>
-						<manifestFile>src/resources/META-INF/MANIFEST.MF</manifestFile>
+						<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
 					</archive>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.8.1</version>
+				<version>2.15</version>
 				<configuration>
 					<parallel>methods</parallel>
 					<threadCount>1</threadCount>
