add mushroom.dat for junit tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,10 @@
+.idea/
+core/core.iml
 .classpath
 .project
 .metadata/
 .settings/
 presentation/
 target/
-kosarak.dat
-mushroom.dat
-accidents.dat
 .class
 *~
-
-core/resources/data/retail.dat
-core/resources/data/accidents.dat
-core/resources/data/chess.dat
-core/resources/data/connect.dat
-core/resources/data/pumsb.dat
-core/resources/data/pumsb_star.dat
-core/resources/data/T10I4D100K.dat
-core/resources/data/T40I10D100K.dat
-core/resources/data/kosarak100k.dat
